# cargo-nav

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
