[package]
name = "cargo-nav"
version = "1.2.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = "Navigate directly to crate links from your terminal"
readme = "README.md"
homepage = "https://github.com/celeo/cargo-nav"
repository = "https://github.com/celeo/cargo-nav"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "crates",
  "navigation"
]
categories = [
  "command-line-utilities",
  "development-tools::cargo-plugins"
]

[dependencies]
anyhow = "1.0.69"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
structopt = "0.3.26"
webbrowser = "0.8.7"

[dev-dependencies]
mockito = "0.25.2"
