[package]
name = "cargo-nav"
version = "1.3.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "Navigate directly to crate links from your terminal"
readme = "README.md"
homepage = "https://github.com/celeo/cargo-nav"
repository = "https://github.com/celeo/cargo-nav"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "crates",
  "navigation"
]
categories = [
  "command-line-utilities",
  "development-tools::cargo-plugins"
]

[dependencies]
anyhow = "1.0.98"
fern = "0.7.1"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
webbrowser = "1.0.4"

[dev-dependencies]
mockito = "0.32.5"
