[package]
name = "cargo-nav"
version = "1.4.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2024"
description = "Navigate directly to crate links from your terminal"
readme = "README.md"
homepage = "https://github.com/celeo/cargo-nav"
repository = "https://github.com/celeo/cargo-nav"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = [
  "crates",
  "navigation"
]
categories = [
  "command-line-utilities",
  "development-tools::cargo-plugins"
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
fern = "0.7.1"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
webbrowser = "1.2.1"

[dev-dependencies]
mockito = "0.32.5"
